# free-genai-bootcamp-2025

./: .gitignore  README.md  final-specs.md
genai-architecting/: RAG-LLM-System-Overview.md  README.md
lang-portal/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  backend-specs.md  docker-compose.yml  explainer-project-structure.md  fe_be_interaction.md  final-specs.md  final-tasklist-project.md  frontend-specs.md  implementation.md  package-lock.json  package.json  uml.md
lang-portal/backend/: .env.example  README.md  alembic.ini  export-dep.bat  export-dep.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  technical-specs-backend.md
lang-portal/backend/app/: main.py
lang-portal/backend/app/api/v1/: api.py
lang-portal/backend/app/api/v1/endpoints/: __init__.py  activities.py  admin.py  dashboard.py  language_pairs.py  languages.py  logs.py  metrics.py  progress.py  sessions.py  statistics.py  vocabularies.py  vocabulary.py  vocabulary_groups.py
lang-portal/backend/app/core/: cache.py  config.py  file_handler.py  logging.py  logging_config.py  metrics.py  tasks.py
lang-portal/backend/app/db/: base_class.py  database.py  init_db.py  session.py
lang-portal/backend/app/middleware/: performance.py  privacy.py  route_privacy.py  security.py
lang-portal/backend/app/models/: __init__.py  activity.py  associations.py  base.py  language.py  language_pair.py  progress.py  vocabulary.py  vocabulary_group.py
lang-portal/backend/app/schemas/: activity.py  dashboard.py  language.py  language_pair.py  metrics.py  progress.py  responses.py  statistics.py  vocabulary.py  vocabulary_group.py
lang-portal/backend/app/services/: activity.py  base.py  dashboard.py  vocabulary_group.py
lang-portal/backend/app/tests/: conftest.py  schemas.py  test_data.py  test_endpoints.py  test_progress_data.py
lang-portal/backend/migrations/: env.py
lang-portal/backend/migrations/versions/: 002_restructure_activity_models.py  003_activity_vocabulary_group.py  004_remove_activity_vocabulary.py  005_optimize_session_models.py  006_activity_system_v2.py  007_activity_privacy_fields.py  308ef75c83eb_create_vocabulary_table.py  4f81bb7868bc_create_vocabulary_table.py  630b9d1c8fcd_add_vocabulary_progress_table.py  9a62654d0a71_initial_migration.py  create_activity_tables.py  d9ac04ba5055_create_vocabulary_table.py  e217893cf733_initial_migration.py  e5fba5eb1a76_add_user_and_session_models.py  xxxxxxxxxxxx_initial_schema.py
lang-portal/backend/scripts/: nginx.conf  prepare_db.py  start-dev.sh  start.sh
lang-portal/backend/scripts/maintenance/: export-dep.bat  export-dep.sh  reorganize_tests.sh
lang-portal/backend/tests/: README.md  conftest.py  privacy_config.py  test_cache.py  test_db_config.py
lang-portal/backend/tests/api/: test_activities.py  test_dashboard.py  test_health.py  test_languages.py  test_privacy.py  test_statistics.py  test_vocabulary_groups.py
lang-portal/backend/tests/api/health/: test_health_checks.py
lang-portal/backend/tests/api/v1/endpoints/: README.md  conftest.py
lang-portal/backend/tests/api/v1/endpoints/activities/: test_advanced.py  test_basic.py  test_practice.py
lang-portal/backend/tests/api/v1/endpoints/common/: test_endpoints.py  test_error_handling.py
lang-portal/backend/tests/api/v1/endpoints/common/fixtures/: README.md  test_data.py
lang-portal/backend/tests/api/v1/endpoints/languages/: test_basic.py
lang-portal/backend/tests/api/v1/endpoints/languages/fixtures/: test_language_data.py
lang-portal/backend/tests/api/v1/endpoints/progress/: test_advanced.py  test_basic.py
lang-portal/backend/tests/api/v1/endpoints/statistics/: test_basic.py
lang-portal/backend/tests/api/v1/endpoints/vocabulary_groups/: test_basic.py
lang-portal/backend/tests/api/v1/endpoints/vocabulary_groups/fixtures/: test_vocabulary_groups.py
lang-portal/backend/tests/core/: test_cache.py  test_cache_invalidation.py  test_file_privacy.py  test_logging.py  test_metrics.py  test_privacy.py  test_redis_config.py
lang-portal/backend/tests/integration/: README.md  test_cache_integration.py  test_cache_metrics_integration.py  test_nginx.py  test_privacy_integration.py
lang-portal/backend/tests/middleware/: test_middleware_chain.py  test_performance.py  test_route_privacy.py
lang-portal/backend/tests/performance/: README.md  test_api_performance.py
lang-portal/backend/tests/services/: test_activity_service.py  test_base_service.py  test_vocabulary_group_service.py
lang-portal/backend/tests/test_api/: conftest.py  test_language_pair_endpoints.py  test_progress_endpoints.py  test_root.py  test_statistics.py  test_vocabulary_endpoints.py
lang-portal/backend/tests/test_db/: conftest.py  test_base_model.py  test_db_pool.py  test_language_models.py  test_language_pairs.py  test_progress.py  test_session_model.py  test_vocabulary.py  test_vocabulary_group_models.py  test_vocabulary_progress.py
lang-portal/backend/tests/test_middleware/: test_middleware_chain.py
lang-portal/backend/tests/test_schemas/: test_schema_validation.py
lang-portal/backend/tests/test_services/: test_base_service.py
lang-portal/backend/testven/: pyvenv.cfg
lang-portal/docs/: HOMEWORK-WEEK1-BACKEND-documentation.md  PRIVACY.md  PROJECT-documentation.md  PROJECT-folderstructure.md  TODO-RELATIONSHIP-CHANGE.md  architecture.md  code-review-checklist.md  deployment.md  developer-guide.md  explainer-configuration-files.md  final-specs.md  tasklist-frontend.md
lang-portal/frontend/: .eslintrc.json  .gitignore  README.md  final-tasklist-project.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  technical-specs-frontend.md  vite.config.ts  vitest.config.ts
lang-portal/prisma/: dev.db  dev.db-journal  schema.prisma  seed.ts
lang-portal/tests/: conftest.py
sentence-constructor/: README.md  results.md
sentence-constructor/google-gemini/: README.md
sentence-constructor/librechat/: README.md
sentence-constructor/mistral/: README.md
sentence-constructor/openai/: README.md
sentence-constructor/perplexity/: README.md
(+335 files in other folders)
